kpm: Update Crew Page and Home Page

--- a/space-tourism/index.html
+++ b/space-tourism/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap"
           rel="stylesheet">
 
-    <title>Vite + React + TS</title>
+    <title>Space Tourism</title>
 </head>
 <body class="body-background">
 
